force-app/main/default/objects/Automation_Toggle__mdt/Automation_Toggle__mdt.object-meta.xml
<CustomObject>
    <description>Universal toggle to turn automation like workflow rules, process builder, validation rules &quot;on/off&quot;.</description>
    <label>Automation Toggle</label>
    <pluralLabel>Automation Toggles</pluralLabel>
</CustomObject>