force-app/main/default/objects/Automation_Toggle__mdt/fields/Flows__c.field-meta.xml
<CustomField>
    <fullName>Flows__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Flows</label>
    <type>Checkbox</type>
</CustomField>