force-app/main/default/objects/Automation_Toggle__mdt/fields/ProcessBuilder__c.field-meta.xml
<CustomField>
    <fullName>ProcessBuilder__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Process Builder</label>
    <type>Checkbox</type>
</CustomField>