force-app/main/default/objects/Automation_Toggle__mdt/fields/ValidationRule__c.field-meta.xml
<CustomField>
    <fullName>ValidationRule__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Validation Rule</label>
    <type>Checkbox</type>
</CustomField>