force-app/main/default/objects/Automation_Toggle__mdt/fields/Workflow_Rules__c.field-meta.xml
<CustomField>
    <fullName>Workflow_Rules__c</fullName>
    <defaultValue>true</defaultValue>
    <label>zWorkflow Rules</label>
    <type>Checkbox</type>
</CustomField>